<summary> is not keyboard accessible. https://bugs.webkit.org/show_bug.cgi?id=75478

Patch by Arko Saha <arko@motorola.com> on 2012-02-13
Reviewed by Hajime Morita.

Source/WebCore:

Toggle the content of <details> element on pressing Enter or Spacebar
key on a focused <summary> element.

Test: fast/html/details-keyboard-show-hide.html

* html/HTMLSummaryElement.cpp:
(WebCore::HTMLSummaryElement::supportsFocus):
(WebCore):
(WebCore::HTMLSummaryElement::defaultEventHandler):
* html/HTMLSummaryElement.h:
(HTMLSummaryElement):

LayoutTests:

* fast/html/details-keyboard-show-hide-expected.txt: Added.
* fast/html/details-keyboard-show-hide.html: Added.
* platform/chromium/test_expectations.txt: <summary> is now focusable and clicking
it draws a focus ring. So we need to rebase failed test cases.

Canonical link: https://commits.webkit.org/95410@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107548 268f45cc-cd09-0410-ab3c-d52691b4dbfc