Source/WebCore/html/HTMLSummaryElement.cpp
@@ -26,6 +26,7 @@
 #include "DetailsMarkerControl.h"
 #include "HTMLContentElement.h"
 #include "HTMLDetailsElement.h"
+#include "KeyboardEvent.h"
 #include "HTMLNames.h"
 #include "MouseEvent.h"
 #include "PlatformMouseEvent.h"
@@ -106,20 +107,49 @@ static bool isClickableControl(Node* node)
     return host && host->isFormControlElement();
 }
 
+bool HTMLSummaryElement::supportsFocus() const
+{
+    return isMainSummary();
+}
+
 void HTMLSummaryElement::defaultEventHandler(Event* event)
 {
-    HTMLElement::defaultEventHandler(event);
-    if (!isMainSummary() || !renderer() || !renderer()->isSummary() || !event->isMouseEvent() || event->type() != eventNames().clickEvent || event->defaultHandled())
-        return;
-    MouseEvent* mouseEvent = static_cast<MouseEvent*>(event);
-    if (mouseEvent->button() != LeftButton)
-        return;
-    if (isClickableControl(event->target()->toNode()))
-        return;
+    if (isMainSummary() && renderer() && renderer()->isSummary()) {
+        if (event->type() == eventNames().DOMActivateEvent && !isClickableControl(event->target()->toNode())) {
+            if (HTMLDetailsElement* details = detailsElement())
+                details->toggleOpen();
+            event->setDefaultHandled();
+            return;
+        }
 
-    if (HTMLDetailsElement* details = detailsElement())
-        details->toggleOpen();
-    event->setDefaultHandled();
+        if (event->isKeyboardEvent()) {
+            if (event->type() == eventNames().keydownEvent && static_cast<KeyboardEvent*>(event)->keyIdentifier() == "U+0020") {
+                setActive(true, true);
+                // No setDefaultHandled() - IE dispatches a keypress in this case.
+                return;
+            }
+            if (event->type() == eventNames().keypressEvent) {
+                switch (static_cast<KeyboardEvent*>(event)->charCode()) {
+                case '\r':
+                    dispatchSimulatedClick(event);
+                    event->setDefaultHandled();
+                    return;
+                case ' ':
+                    // Prevent scrolling down the page.
+                    event->setDefaultHandled();
+                    return;
+                }
+            }
+            if (event->type() == eventNames().keyupEvent && static_cast<KeyboardEvent*>(event)->keyIdentifier() == "U+0020") {
+                if (active())
+                    dispatchSimulatedClick(event);
+                event->setDefaultHandled();
+                return;
+            }
+        }
+    }
+
+    HTMLElement::defaultEventHandler(event);
 }
 
 }
